[tool.poetry]
name = "pytt"
version = "0.1.0"
description = ""
authors = ["kennethcheo <kennethcheo1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.9b0"
blessed = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
