[tool.poetry]
name = "ttpyer"
version = "0.1.0"
description = "A terminal based typing test written in Python."
authors = ["kennethcheo <kennethcheo1@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kennethcheo/ttpyer"
keywords = ["terminal", "typingtest"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.9b0"
blessed = "^1.19.0"
urwid = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
